# water_reflection

./: CMakeLists.txt  README.md  main.cpp  main.h  onScreenObjects.h
camera/: camera.cpp  camera.h
input/: input.h
mesh/: mesh.cpp  mesh.h  mesh.vert
platform/: glfw_launcher.cpp  glfw_launcher.h  hardware.h
shaders/: grid.frag  grid.vert
skybox/: skybox.cpp  skybox.h  skybox.vert
utils/io/: shader_loader.cpp  shader_loader.h  stb_image.cpp  video.cpp  video.h
utils/math_utils/: quat_funcs.cpp  quat_funcs.h
water/: water.cpp  water.frag  water.h  water.vert
